force-app/main/default/objects/Case/fields/Achieve_response_time__c.field-meta.xml
<CustomField>
    <fullName>Achieve_response_time__c</fullName>
    <formula>IF(AND
     (OR(ISPICKVAL(Origin, &quot;Twitter&quot;),ISPICKVAL(Origin, &quot;Instagram&quot;),ISPICKVAL(Origin, &quot;Facebook&quot;), 
         ISPICKVAL(Origin, &quot;YouTube&quot;)) , 
      Response_Time_Minutes__c &gt;= 0 &amp;&amp; Response_Time_Minutes__c &lt;= 15), 
    TRUE,
    IF(AND(ISPICKVAL(Origin, &quot;Email&quot;), Response_Time_Minutes__c &gt;= 0 &amp;&amp; Response_Time_Minutes__c &lt;= 60),
       TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieve response time</label>
    <type>Checkbox</type>
</CustomField>