force-app/main/default/objects/Case/fields/Achieve_response_time_v2__c.field-meta.xml
<CustomField>
    <fullName>Achieve_response_time_v2__c</fullName>
    <formula>IF(
    OR(
        AND(
            OR(
                ISPICKVAL(Origin, &quot;Twitter&quot;),
                ISPICKVAL(Origin, &quot;Instagram&quot;),
                ISPICKVAL(Origin, &quot;Facebook&quot;)),
            Response_Time_Minutes__c &gt; 0 &amp;&amp; Response_Time_Minutes__c &lt;= 15
        ),
        AND(
            ISPICKVAL(Origin, &quot;Email&quot;),
            Response_Time_Minutes__c &gt; 0 &amp;&amp; Response_Time_Minutes__c &lt;= 60
        ),
        AND(
            OR(
                ISPICKVAL(Origin, &quot;Appstore&quot;),
                ISPICKVAL(Origin, &quot;Playstore&quot;),
                ISPICKVAL(Origin, &quot;YouTube&quot;)
            ),
            Response_Time_Minutes__c &gt; 0 &amp;&amp; Response_Time_Minutes__c &lt;= 1440
        )
    ),
    TRUE,
    FALSE
)</formula>
    <label>Achieve response time v2</label>
    <type>Checkbox</type>
</CustomField>