force-app/main/default/objects/Case/fields/Achieve_response_time_v3__c.field-meta.xml
<CustomField>
    <fullName>Achieve_response_time_v3__c</fullName>
    <formula>IF(
    OR(
        AND(
            OR(
                ISPICKVAL(Origin, &quot;Twitter&quot;),
                ISPICKVAL(Origin, &quot;Instagram&quot;),
                AND(
                    ISPICKVAL(Origin, &quot;Facebook&quot;),
                    NOT(CONTAINS(Subject, &quot;Direct message&quot;))
                )
            ),
            Response_Time_Minutes__c &gt; 0 &amp;&amp; Response_Time_Minutes__c &lt;= 15
        ),
        AND(
            ISPICKVAL(Origin, &quot;Email&quot;),
            Response_Time_Minutes__c &gt; 0 &amp;&amp; Response_Time_Minutes__c &lt;= 60
        ),
        AND(
            ISPICKVAL(Origin, &quot;Facebook&quot;),
            CONTAINS(Subject, &quot;Direct message&quot;),
            Response_Time_Minutes__c &gt; 0 &amp;&amp; Response_Time_Minutes__c &lt;= 2
        ),
        AND(
            OR(
                ISPICKVAL(Origin, &quot;Apple App Store&quot;),
                ISPICKVAL(Origin, &quot;Play Store&quot;),
                ISPICKVAL(Origin, &quot;YouTube&quot;)
            ),
            Response_Time_Minutes__c &gt; 0 &amp;&amp; Response_Time_Minutes__c &lt;= 1440
        )
    ),
    TRUE,
    FALSE
)</formula>
    <label>Achieve response time v3</label>
    <type>Checkbox</type>
</CustomField>