force-app/main/default/objects/Case/fields/AHT__c.field-meta.xml
<CustomField>
    <fullName>AHT__c</fullName>
    <formula>(Date_Time_Answer__c -  SCC_Assigned_Date__c  )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHT (minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>