force-app/main/default/objects/Case/fields/Alamat_Form_Demo__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Form_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alamat Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>