force-app/main/default/objects/Case/fields/Alasan_Kebutuhan_Perpanjangan_DCF__c.field-meta.xml
<CustomField>
    <fullName>Alasan_Kebutuhan_Perpanjangan_DCF__c</fullName>
    <label>Alasan Kebutuhan Perpanjangan DCR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>