force-app/main/default/objects/Case/fields/Alasan_Perpanjangan__c.field-meta.xml
<CustomField>
    <fullName>Alasan_Perpanjangan__c</fullName>
    <label>Alasan Perpanjangan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaksi keuangan yang diadukan oleh Konsumen memerlukan penelitian khusus terhadap dokumen-dokumen PUJK</fullName>
            </value>
            <value>
                <fullName>Kantor PUJK yang menerima pengaduan tidak sama dengan kantor PUJK tempat terjadinya permasalahan yang diadukan dan terdapat kendala komunikasi di antara kedua kantor PUJK tersebut.</fullName>
            </value>
            <value>
                <fullName>Terdapat hal-hal lain di luar kendali PUJK seperti adanya keterlibatan pihak ketiga di luar PUJK dalam transaksi keuangan yang dilakukan oleh Konsumen.</fullName>
            </value>
            <value>
                <fullName>Lainnya</fullName>
            </value>
            <value>
                <fullName>Belum mendapatkan tanggapan dari produk Owner</fullName>
                <isActive>false</isActive>
                <label>Belum mendapatkan tanggapan dari produk Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>