force-app/main/default/objects/Case/fields/Alasan_Perpanjangan_Type__c.field-meta.xml
<CustomField>
    <fullName>Alasan_Perpanjangan_Type__c</fullName>
    <label>Alasan Perpanjangan Lainnya</label>
    <length>255</length>
    <type>Text</type>
</CustomField>