force-app/main/default/objects/Case/fields/APPK_Saat_Ini__c.field-meta.xml
<CustomField>
    <fullName>APPK_Saat_Ini__c</fullName>
    <formula>IF(OR(ISPICKVAL(Status, &quot;Cancelled&quot;),ISPICKVAL(Status, &quot;Closed&quot;),ISPICKVAL(Status, &quot;Disconnected&quot;)), SLA_saat_ini__c ,NULL)</formula>
    <label>APPK Saat Ini SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>