force-app/main/default/objects/Case/fields/Approved_Date_Checker__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Checker__c</fullName>
    <label>Approved Date Checker</label>
    <type>Date</type>
</CustomField>