force-app/main/default/objects/Case/fields/Approved_Date_Signer__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Signer__c</fullName>
    <label>Approved Date Signer</label>
    <type>Date</type>
</CustomField>