force-app/main/default/objects/Case/fields/Assign_Date_NFT__c.field-meta.xml
<CustomField>
    <fullName>Assign_Date_NFT__c</fullName>
    <label>Assign Date NFT</label>
    <type>DateTime</type>
</CustomField>