force-app/main/default/objects/Case/fields/Assignee_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Date__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Assignee Date</label>
    <type>DateTime</type>
</CustomField>