force-app/main/default/objects/Case/fields/Attachment_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment Settlement</label>
    <type>Checkbox</type>
</CustomField>