force-app/main/default/objects/Case/fields/Automation_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Automation_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automation Settlement</label>
    <type>Checkbox</type>
</CustomField>