force-app/main/default/objects/Case/fields/AVL_Instalement__c.field-meta.xml
<CustomField>
    <fullName>AVL_Instalement__c</fullName>
    <label>AVL Instalement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>