force-app/main/default/objects/Case/fields/Awal_Pengaduan__c.field-meta.xml
<CustomField>
    <fullName>Awal_Pengaduan__c</fullName>
    <label>Awal Pengaduan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRI</fullName>
            </value>
            <value>
                <fullName>OJK</fullName>
            </value>
            <value>
                <fullName>SP4N LAPOR</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>