force-app/main/default/objects/Case/fields/Backup_Agent__c.field-meta.xml
<CustomField>
    <fullName>Backup_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the assigned support rep when case owner is away — for support use only</description>
    <inlineHelpText>Who is the assigned support rep when case owner is away?</inlineHelpText>
    <label>Backup Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Support User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>