force-app/main/default/objects/Case/fields/Biaya_Administrasi__c.field-meta.xml
<CustomField>
    <fullName>Biaya_Administrasi__c</fullName>
    <label>Biaya Administrasi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>