force-app/main/default/objects/Case/fields/Biaya_Derek__c.field-meta.xml
<CustomField>
    <fullName>Biaya_Derek__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biaya Derek</label>
    <type>Checkbox</type>
</CustomField>