force-app/main/default/objects/Case/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <formula>IF(  LEFT(OwnerId, 3)= &apos;005&apos; &amp;&amp; Main_Branch__c != &apos;&apos; &amp;&amp;  Main_Branch_Description__c != &apos;&apos;, Owner:User.BranchCode__c , 

IF( Cost_Center__c != &apos;&apos;, &apos;00229&apos;, CodeBranch__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>