force-app/main/default/objects/Case/fields/Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>Branch_Office__c</fullName>
    <formula>Unit_Kerja_2__r.Nama_Cabang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Office</label>
    <type>Text</type>
</CustomField>