force-app/main/default/objects/Case/fields/Branch_Reg__c.field-meta.xml
<CustomField>
    <fullName>Branch_Reg__c</fullName>
    <label>Branch Claim Reg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>