force-app/main/default/objects/Case/fields/Branch_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit_Name__c</fullName>
    <label>Branch Unit Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>