force-app/main/default/objects/Case/fields/BRI_CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>BRI_CreatedTime__c</fullName>
    <formula>MID(TEXT(DATETIMEVALUE(CreatedDate + 7/24)), 12, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time</label>
    <type>Text</type>
</CustomField>