force-app/main/default/objects/Case/fields/Cabang__c.field-meta.xml
<CustomField>
    <fullName>Cabang__c</fullName>
    <formula>CreatedBy.SCC_Branch__c != &quot;229&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cabang</label>
    <type>Checkbox</type>
</CustomField>