force-app/main/default/objects/Case/fields/CASCO__c.field-meta.xml
<CustomField>
    <fullName>CASCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CASCO</label>
    <type>Checkbox</type>
</CustomField>