force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <description>Consists of the type of category of the case.</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Complaint - Transaction</fullName>
            </value>
            <value>
                <fullName>Fraud / Suspicious Transactions</fullName>
            </value>
            <value>
                <fullName>Products / Promotion Inquiry</fullName>
            </value>
            <value>
                <fullName>Complaint - Non-Transaction</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Platform &amp; Device Support</fullName>
            </value>
            <value>
                <fullName>Third Party Support</fullName>
            </value>
            <value>
                <fullName>Customer Feedback / Sentiment Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>