force-app/main/default/objects/Case/fields/Case_Owner_X_User__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_X_User__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner X User</label>
    <type>Checkbox</type>
</CustomField>