force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Alasan High (Urgent)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pengaduan yang disampaikan dengan kemarahan dan ancaman (hard complaint)</fullName>
            </value>
            <value>
                <fullName>Pengaduan yang disampaikan oleh tokoh masyarakat setempat, pejabat daerah setempat, termasuk wartawan dan Lembaga Sosial Masyarakat (LSM)</fullName>
            </value>
            <value>
                <fullName>Pengaduan yang berulang</fullName>
            </value>
            <value>
                <fullName>Pengaduan yang melebihi SLA yang dijanjikan</fullName>
            </value>
            <value>
                <fullName>Pengaduan yang masuk media sosial dan berpotensi viral</fullName>
            </value>
            <value>
                <fullName>Pengaduan yang masuk ke media massa (cetak/elektronik)</fullName>
            </value>
            <value>
                <fullName>Pengaduan yang disampaikan kembali karena belum menyetujui hasil investigasi sanggahan transaksi sebelumnya</fullName>
            </value>
            <value>
                <fullName>Nasabah UKO Metro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>