force-app/main/default/objects/Case/fields/Case_Type_Nota__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Nota__c</fullName>
    <formula>SCC_Case_Type_for_Suggested_Article__c = &apos;8812&apos; || SCC_Case_Type_for_Suggested_Article__c = &apos;8915&apos; || SCC_Case_Type_for_Suggested_Article__c = &apos;8713&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type Nota</label>
    <type>Checkbox</type>
</CustomField>