force-app/main/default/objects/Case/fields/Cause_of_Loss_LU__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Loss_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cause of Loss</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cause Of Loss</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>