force-app/main/default/objects/Case/fields/Channel_APPK__c.field-meta.xml
<CustomField>
    <fullName>Channel_APPK__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPK</fullName>
            </value>
            <value>
                <fullName>Dio</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Klarifikasi</fullName>
            </value>
            <value>
                <fullName>Laman Lapor</fullName>
            </value>
            <value>
                <fullName>Penerusan</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Web PPID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>