force-app/main/default/objects/Case/fields/Channel_Topup__c.field-meta.xml
<CustomField>
    <fullName>Channel_Topup__c</fullName>
    <label>Channel Topup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Dana</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Shopee</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Lazada</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Blibli</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Agen Brilink</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Non Fee Transaction (NBMB:ATM On Us)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>