force-app/main/default/objects/Case/fields/Check_Maker__c.field-meta.xml
<CustomField>
    <fullName>Check_Maker__c</fullName>
    <formula>Maker__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Maker</label>
    <type>Checkbox</type>
</CustomField>