force-app/main/default/objects/Case/fields/Checker__c.field-meta.xml
<CustomField>
    <fullName>Checker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>