force-app/main/default/objects/Case/fields/Checker_Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Checker_Approved_Date_Time__c</fullName>
    <label>Checker Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>