force-app/main/default/objects/Case/fields/Chronology__c.field-meta.xml
<CustomField>
    <fullName>Chronology__c</fullName>
    <label>Chronology</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>