force-app/main/default/objects/Case/fields/Cicilan_per_Bulan__c.field-meta.xml
<CustomField>
    <fullName>Cicilan_per_Bulan__c</fullName>
    <label>Cicilan per Bulan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>