force-app/main/default/objects/Case/fields/Claim_Created__c.field-meta.xml
<CustomField>
    <fullName>Claim_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Created</label>
    <type>Checkbox</type>
</CustomField>