force-app/main/default/objects/Case/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MV</fullName>
                <label>Pelaporan Klaim Kendaraan</label>
            </value>
            <value>
                <fullName>Non MV</fullName>
                <label>Pelaporan Klaim Non Kendaraan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>