force-app/main/default/objects/Case/fields/CodeBranch__c.field-meta.xml
<CustomField>
    <fullName>CodeBranch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CodeBranch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>