force-app/main/default/objects/Case/fields/Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Name__c</fullName>
    <label>Corporate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>