force-app/main/default/objects/Case/fields/Cost_Center_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Center Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>