force-app/main/default/objects/Case/fields/Count_Adjust_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Count_Adjust_Deposit__c</fullName>
    <label>Count Adjust Deposit</label>
    <summaryForeignKey>Adjust_Deposit__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>