force-app/main/default/objects/Case/fields/Count_EJ__c.field-meta.xml
<CustomField>
    <fullName>Count_EJ__c</fullName>
    <label>Count EJ</label>
    <summaryForeignKey>EJ__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>