force-app/main/default/objects/Case/fields/Count_Nota__c.field-meta.xml
<CustomField>
    <fullName>Count_Nota__c</fullName>
    <label>Count Nota</label>
    <summaryForeignKey>SCC_Nota_Manual__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>