force-app/main/default/objects/Case/fields/Count_Rekon__c.field-meta.xml
<CustomField>
    <fullName>Count_Rekon__c</fullName>
    <description>Count Rekon</description>
    <label>Count Rekon</label>
    <summaryForeignKey>SCC_Rekon__c.SCC_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>