force-app/main/default/objects/Case/fields/Count_Replace_Card__c.field-meta.xml
<CustomField>
    <fullName>Count_Replace_Card__c</fullName>
    <label>Count Replace Card</label>
    <summaryForeignKey>Brizzi_Card__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>