force-app/main/default/objects/Case/fields/Count_Unmatch_Rekon__c.field-meta.xml
<CustomField>
    <fullName>Count_Unmatch_Rekon__c</fullName>
    <label>Count Unmatch Rekon</label>
    <summaryFilterItems>
        <field>SCC_Rekon__c.SCC_Status_Rekon__c</field>
        <operation>equals</operation>
        <value>Unmatch</value>
    </summaryFilterItems>
    <summaryForeignKey>SCC_Rekon__c.SCC_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>