force-app/main/default/objects/Case/fields/Cust_Current_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cust_Current_Phone__c</fullName>
    <label>Nomor Telp yang dapat dihubungi</label>
    <type>Phone</type>
</CustomField>