force-app/main/default/objects/Case/fields/Custom_Formula__c.field-meta.xml
<CustomField>
    <fullName>Custom_Formula__c</fullName>
    <formula>IF(
    SCC_Call_Type__r.Name = &quot;2702&quot;, 
    10, 
    SCC_Call_Type__r.SCC_Total_SLA__c
)</formula>
    <label>Custom Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>