force-app/main/default/objects/Case/fields/Data_benar_dan_akurat__c.field-meta.xml
<CustomField>
    <fullName>Data_benar_dan_akurat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data benar dan akurat</label>
    <type>Checkbox</type>
</CustomField>