force-app/main/default/objects/Case/fields/Date_Time_Answer__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Answer__c</fullName>
    <label>Date/ Time Answer</label>
    <type>DateTime</type>
</CustomField>