force-app/main/default/objects/Case/fields/Date_Time_Answer_With_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Answer_With_Seconds__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(Date_Time_Answer__c ))) &amp; &quot;/&quot; &amp;
TEXT(MONTH(DATEVALUE(Date_Time_Answer__c ))) &amp; &quot;/&quot; &amp;
TEXT(YEAR(DATEVALUE(Date_Time_Answer__c ))) &amp; &quot; &quot; &amp;
MID(TEXT(Date_Time_Answer__c + (7/24)), 12, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_Time_Answer_With_Seconds</label>
    <type>Text</type>
</CustomField>