force-app/main/default/objects/Case/fields/Date_Time_Created_With_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Created_With_Seconds__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp;
TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp;
TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot; &quot; &amp;
MID(TEXT(CreatedDate + (7/24)), 12, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_Time_Created_With_Seconds</label>
    <type>Text</type>
</CustomField>