force-app/main/default/objects/Case/fields/Date_Time_Post__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Post__c</fullName>
    <label>Date/Time Post</label>
    <type>DateTime</type>
</CustomField>