force-app/main/default/objects/Case/fields/Date_Within_OLA__c.field-meta.xml
<CustomField>
    <fullName>Date_Within_OLA__c</fullName>
    <formula>ISBLANK(SCC_Call_Type__c  ) &amp;&amp;  (MONTH( TODAY()) == MONTH(  DATEVALUE(CreatedDate ) )&amp;&amp;
  YEAR( TODAY()) == YEAR( DATEVALUE(CreatedDate) ) &amp;&amp;  (DAY( TODAY())- DAY(DATEVALUE( CreatedDate) )&lt;=1 ))</formula>
    <label>Date Within OLA</label>
    <type>Checkbox</type>
</CustomField>