force-app/main/default/objects/Case/fields/DateAnswerFixing__c.field-meta.xml
<CustomField>
    <fullName>DateAnswerFixing__c</fullName>
    <formula>Date_Time_Answer__c + (Response_Time_Second__c / 86400)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateAnswerFixing</label>
    <type>DateTime</type>
</CustomField>