force-app/main/default/objects/Case/fields/Demo_Agama__c.field-meta.xml
<CustomField>
    <fullName>Demo_Agama__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agama</label>
    <length>120</length>
    <type>Text</type>
</CustomField>