force-app/main/default/objects/Case/fields/Demo_Alamat_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Alamat_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alamat_KTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>