force-app/main/default/objects/Case/fields/Demo_Berlaku_hingga_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Berlaku_hingga_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Berlaku hingga KTP</label>
    <length>120</length>
    <type>Text</type>
</CustomField>