force-app/main/default/objects/Case/fields/Demo_Card_Type_OCR__c.field-meta.xml
<CustomField>
    <fullName>Demo_Card_Type_OCR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>[Demo] Card Type OCR</label>
    <length>120</length>
    <type>Text</type>
</CustomField>