force-app/main/default/objects/Case/fields/Demo_Golangan_Darah_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Golangan_Darah_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Golangan Darah KTP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>