force-app/main/default/objects/Case/fields/Demo_Header_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Header_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Header KTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>