force-app/main/default/objects/Case/fields/Demo_Kecamatan_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Kecamatan_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kecamatan KTP</label>
    <length>120</length>
    <type>Text</type>
</CustomField>