force-app/main/default/objects/Case/fields/Demo_Kelurahan_Desa__c.field-meta.xml
<CustomField>
    <fullName>Demo_Kelurahan_Desa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kelurahan/Desa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>