force-app/main/default/objects/Case/fields/Demo_Kewarnagaraan__c.field-meta.xml
<CustomField>
    <fullName>Demo_Kewarnagaraan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kewarnagaraan</label>
    <length>120</length>
    <type>Text</type>
</CustomField>