force-app/main/default/objects/Case/fields/Demo_Kota_Terbit_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Kota_Terbit_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kota Terbit KTP</label>
    <length>120</length>
    <type>Text</type>
</CustomField>