force-app/main/default/objects/Case/fields/Demo_Nama_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Nama_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nama_OCR</label>
    <length>225</length>
    <type>Text</type>
</CustomField>