force-app/main/default/objects/Case/fields/Demo_NIK_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_NIK_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Number OCR</label>
    <length>16</length>
    <type>Text</type>
</CustomField>